# The-Way-Of-The-Galaxy

./: .gitignore  CMakeLists.txt  README.md  The Way Of The Galaxy Definitive.sln  The Way Of The Galaxy.sln
The Way Of The Galaxy/: AssetsManager.cpp  BackgroundManager.cpp  CMakeLists.txt  Collision.cpp  CollisionsManager.cpp  ConvexDecomposition.cpp  ECS.cpp  Engine.cpp  LevelManager.cpp  Main.cpp  Point.cpp  Statusbar.cpp  TextureManager.cpp  The Way Of The Galaxy.vcxproj  The Way Of The Galaxy.vcxproj.filters  TilemapsManager.cpp  TimeAction.cpp  Vector2D.cpp  Widget.cpp  assetsList.json  tilemapsList.json
The Way Of The Galaxy Definitive/: Background.cpp  Background.h  BackgroundManager.cpp  BackgroundsManager.cpp  CMakeLists.txt  CMakeSettings.json  ColliderComponent.h  ColliderIds.h  Collision.cpp  Collision.h  CollisionRules.cpp  CollisionSettings.cpp  Components.h  ECS.cpp  ECS.h  EnemyComponent.h  Engine.cpp  Engine.h  ExplodeComponent.h  GroupLabels.h  KeyboardController.h  LevelManager.cpp  LevelManager.h  Main.cpp  MissileComponent.h  PlayerComponent.h  PositionComponent.h  SpriteComponent.h  Statusbar.cpp  Text.cpp  TextureManager.cpp  TextureManager.h  The Way Of The Galaxy Definitive.vcxproj  The Way Of The Galaxy Definitive.vcxproj.filters  TimeAction.cpp  TimeAction.h  Vector2D.cpp  Vector2D.h
The Way Of The Galaxy Definitive/ECS/: BulletComponent.h  ColliderComponent.h  ECS.h  EnemyComponent.h  ExplodeComponent.h  ExplosionComponent.h  KeyboardController.h  MissileComponent.h  PlayerComponent.h  PositionComponent.h  SpriteComponent.h  TextComponent.h
The Way Of The Galaxy Definitive/include/: Animation.h  Background.h  BackgroundManager.h  BackgroundsManager.h  ColliderIds.h  Collision.h  CollisionRules.h  CollisionSettings.h  Components.h  Engine.h  GroupLabels.h  Random.h  Statusbar.cpp  Statusbar.h  Text.h  TextureManager.h  Vector2D.h
The Way Of The Galaxy Definitive/sprites/pixelorama/: missileIcon.pxo  statusbar.pxo
The Way Of The Galaxy Definitive/sprites/pixelorama/icons/: missileIcon.pxo
The Way Of The Galaxy/ECS/: AutodestroyComponent.cpp  ColliderComponent.cpp  ColliderComponent.h  ECS.cpp  ECS.h  EnemyComponent.h  ExplodeComponent.cpp  ExplodeComponent.h  ExplosionComponent.cpp  ExplosionComponent.h  KeyboardController.h  MissileComponent.cpp  MissileComponent.h  PlayerComponent.h  PlayerSpaceship.cpp  PositionComponent.cpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TransformComponent.cpp
The Way Of The Galaxy/ECS/custom/: PlayerSpaceship.cpp  PlayerSpaceship.h
The Way Of The Galaxy/assets/: asset.json  asset2.json  assetTemplate.json  background1_level1.json  laser.json  missile.json  playerSpaceship.json
The Way Of The Galaxy/include/: Animation.h  AssetsManager.h  BackgroundManager.h  CollisionsManager.h  Components.h  ConcavePolygon.h  ConvexDecomposition.h  ECS.h  Engine.h  Explosion.h  LevelManager.h  Point.h  Polygon.h  Rectangle.h  Statusbar.h  TilemapsManager.h  TimeAction.h  Vector2D.h  Widget.h
The Way Of The Galaxy/include/ECS/: AutodestroyComponent.h  ColliderComponent.h  Components.h  ExplodeComponent.h  ExplosionComponent.h  MissileComponent.h  PositionComponent.h  SpriteComponent.h  TextComponent.h  TransformComponent.h
The Way Of The Galaxy/include/ECS/custom/: CustomComponents.h  PlayerSpaceship.h
The Way Of The Galaxy/levelmaps/: test.json
The Way Of The Galaxy/sprites/pixelorama/: PolygonConcaveTest.pxo  PolygonConvexTest.pxo  missile.pxo  pieces.pxo
The Way Of The Galaxy/sprites/pixelorama/icons/: energyIcon.pxo
The Way Of The Galaxy/statusbar/: statusbarSettings.json
The Way Of The Galaxy/tilemaps/: TilemapTest1.csv  tilesetsList.json
The Way Of The Galaxy/tilemaps/tiled/: Space Station Tileset.tsx  TilemapTest1.tmj
The Way Of The Galaxy/tilemaps/tilesets/: Space_Station.tsj
